Ajout format video firefox

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 <div id="background" class="section">
     <video id="backVid" autoplay loop muted>
         <source src="Space.mp4">
+        <source src="Space.webm">
     </video>
     <div id="layer"></div>
     <div id="logo">
